--- a/frontend-server/config.json
+++ b/frontend-server/config.json
@@ -1,3 +1,8 @@
 {
-  "DATABASE_ADDRESS":"https://swengdb.firebaseio.com/"
+  "apiKey": "AIzaSyDoC0UaSQg6MJ7KHQCFny7hp6TGlk7zEi8",
+  "authDomain": "swengdb.firebaseapp.com",
+  "databaseURL": "https://swengdb.firebaseio.com",
+  "projectId": "swengdb",
+  "storageBucket": "swengdb.appspot.com",
+  "messagingSenderId": "766339450185"
 }
