--- a/frontend-server/config.json
+++ b/frontend-server/config.json
@@ -1,8 +1,8 @@
 {
-  "apiKey": "AIzaSyDoC0UaSQg6MJ7KHQCFny7hp6TGlk7zEi8",
+  "apiKey": "KEY GOES HERE",
   "authDomain": "swengdb.firebaseapp.com",
   "databaseURL": "https://swengdb.firebaseio.com",
   "projectId": "swengdb",
   "storageBucket": "swengdb.appspot.com",
-  "messagingSenderId": "766339450185"
+  "messagingSenderId": "ID GOES HERE"
 }
